RESOLVED FIXED33052
[Qt] http/tests/plugins/post-url-file.html failure
https://bugs.webkit.org/show_bug.cgi?id=33052
Summary [Qt] http/tests/plugins/post-url-file.html failure
Jakub Wieczorek
Reported 2009-12-30 05:44:31 PST
The test fails because of the FIXME in PluginView::handlePostReadFile(): // FIXME - read the file data into buffer
Attachments
proposed patch (3.73 KB, patch)
2009-12-30 05:55 PST, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-12-30 05:55:09 PST
WebKit Review Bot
Comment 2 2009-12-30 05:56:51 PST
style-queue ran check-webkit-style on attachment 45660 [details] without any errors.
Simon Hausmann
Comment 3 2009-12-30 06:50:29 PST
Comment on attachment 45660 [details] proposed patch r=me, nice! Another option would be to rewrite this code to use QFile or even share an implementation across ports if possible...
WebKit Commit Bot
Comment 4 2009-12-30 06:58:39 PST
Comment on attachment 45660 [details] proposed patch Clearing flags on attachment: 45660 Committed r52660: <http://trac.webkit.org/changeset/52660>
WebKit Commit Bot
Comment 5 2009-12-30 06:58:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.