2009-12-30  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] Fix PluginView::handlePostReadFile().
        https://bugs.webkit.org/show_bug.cgi?id=33052

        The function should actually rewrite the given file to the buffer.

        This change fixes http/tests/plugins/post-url-file.html, which can be unskipped
        now along with other passing http/plugins tests.

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::handlePostReadFile):
2009-12-30  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix PluginView::handlePostReadFile().
        https://bugs.webkit.org/show_bug.cgi?id=33052

        The function should actually rewrite the given file to the buffer.

        This change fixes http/tests/plugins/post-url-file.html, which can be unskipped
        now along with other passing http/plugins tests.

        * platform/qt/Skipped:


Canonical link: https://commits.webkit.org/44073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52660 268f45cc-cd09-0410-ab3c-d52691b4dbfc